objects/SVMXC__SFM_Event__c.object
<CustomObject>
    <description>Object to store event details.</description>
    <fields>
        <fullName>SVMXC__Class__c</fullName>
        <description>Class name of the web service call</description>
        <label>Target Call Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Code_Snippet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code Snippet</label>
        <referenceTo>SVMXC__Code_Snippet__c</referenceTo>
        <relationshipLabel>SFM Events</relationshipLabel>
        <relationshipName>SFM_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Description__c</fullName>
        <description>Description of the web service call or custom link used in APL process</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Event_Call_Type__c</fullName>
        <label>Event Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JAVASCRIPT</fullName>
                </value>
                <value>
                    <fullName>WEBSERVICE</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>SFM CUSTOM ACTION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Event_Id__c</fullName>
        <description>Text Id required to load standard events.</description>
        <label>Event Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>After Add Record</fullName>
                </value>
                <value>
                    <fullName>Button Click</fullName>
                </value>
                <value>
                    <fullName>Field Change</fullName>
                </value>
                <value>
                    <fullName>Field Exit</fullName>
                </value>
                <value>
                    <fullName>On Load</fullName>
                </value>
                <value>
                    <fullName>Before Save/Update</fullName>
                </value>
                <value>
                    <fullName>After Save/Update</fullName>
                </value>
                <value>
                    <fullName>Before Save/Insert</fullName>
                </value>
                <value>
                    <fullName>After Save/Insert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Installation_Key__c</fullName>
        <description>Installation key used when seeding default configuration settings</description>
        <inlineHelpText>Installation key used when seeding default configuration settings</inlineHelpText>
        <label>Installation Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsStandard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsStandard</description>
        <inlineHelpText>IsStandard</inlineHelpText>
        <label>Is Standard?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Method__c</fullName>
        <description>Method name of the web service call</description>
        <label>Target Call Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Namespace__c</fullName>
        <description>Namespace of the web service call, if applicable</description>
        <label>Target Call Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Page_Layout_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Page Layout Detail</label>
        <referenceTo>SVMXC__Page_Layout_Detail__c</referenceTo>
        <relationshipLabel>SFM Event</relationshipLabel>
        <relationshipName>SFM_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Page_Layout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Page Layout</label>
        <referenceTo>SVMXC__Page_Layout__c</referenceTo>
        <relationshipLabel>SFM Event</relationshipLabel>
        <relationshipName>SFM_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__ServiceMax_Custom_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the custom action used in APL process</description>
        <label>ServiceMax Custom Action</label>
        <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
        <relationshipLabel>SFM Events (ServiceMax Custom Action)</relationshipLabel>
        <relationshipName>SFM_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__ServiceMax_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the APL process</description>
        <label>ServiceMax Process</label>
        <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
        <relationshipLabel>SFM Events</relationshipLabel>
        <relationshipName>SFM_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Target_Call__c</fullName>
        <label>Target Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__URL_Window_Type__c</fullName>
        <label>URL Window Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Blank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SFM Event</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFM Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>